another try at fix the wallpaper on mobile

--- a/main.css
+++ b/main.css
@@ -22,7 +22,21 @@ body {
   padding: 0;
   background: linear-gradient(165deg, rgb(106, 171, 206), rgb(1, 94, 119));
   color: var(--primary-text);
-  overscroll-behavior: none;
+}
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(img/bg/desktop.webp) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 .glass {
   width: 80%;
@@ -133,7 +147,7 @@ input {
   margin-top: 2.5rem;
 }
 
-#background_wrap {
+/* #background_wrap {
   z-index: -1;
   position: fixed;
   top: 0;
@@ -143,7 +157,7 @@ input {
   background-size: 100%;
   background-image: url(img/bg/mobile.webp);
   background-attachment: fixed;
-}
+} */
 
 #header {
   z-index: 5;
@@ -466,11 +480,11 @@ input {
 }
 */
 /* All mobile devices */
-@media (pointer:coarse) {
+/* @media (pointer:coarse) {
   body {
     background-attachment: initial;
   }
-}
+} */
 
 @media only screen and (max-device-width: 320px) {
   nav > a > svg {
@@ -496,10 +510,10 @@ input {
 }
 
 /* iPads */
-@media only screen and (min-device-width : 768px) {
-  #background_wrap {
+@media only screen and (min-width : 768px) {
+  /* #background_wrap {
     background-image: url(img/bg/tablet.webp);
-  }
+  } */
   #header {
     display: flex;
     align-items: center;
@@ -620,16 +634,13 @@ input {
 }
 
 /* Desktops and laptops ----------- */
-@media only screen and (min-width : 1224px) {
-  body {
+@media (min-width : 1224px) {
+  /* #background_wrap {
     background-image: url(img/bg/desktop.webp);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
-  };
-  #background_wrap {
-    display: none;
-  }
+  } */
   .centerquote {
     width: max-content;
     margin: auto;
